gitops/02-apps/main/private-assistant/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: private-assistant-public-route
  namespace: private-assistant
spec:
  parentRefs:
    - name: service-gateway
      namespace: kgateway
  hostnames:
    - "private-assistant.jin-server.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2/
      backendRefs:
        - name: oauth2-proxy
          namespace: oauth2-proxy
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: private-assistant-secure-route
  namespace: private-assistant
spec:
  parentRefs:
    - name: service-gateway
      namespace: kgateway
  hostnames:
    - "private-assistant.jin-server.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: private-assistant
          port: 80
